--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.2.0.3001-SNAPSHOT" encoding="UTF-8" standalone="yes"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.photon.phresco</groupId>
     <artifactId>PHR_AndroidNative</artifactId>
     <packaging>apk</packaging>
     <name>PHR_AndroidNative</name>
-    <version>1.0.0</version>
+    <version>1.2.0.3001-SNAPSHOT</version>
 	<inceptionYear>1999</inceptionYear>
     <organization>
         <name>Photon Infotech Inc.</name>
@@ -26,7 +26,7 @@
                 <plugin>
                     <groupId>com.photon.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>1.1.17000</version>
+                    <version>1.2.0.3001-SNAPSHOT</version>
                     <extensions>true</extensions>
                 </plugin>
             </plugins>
