--- a/test/performance/pom.xml
+++ b/test/performance/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.2.0.3001-SNAPSHOT" encoding="UTF-8"?>
 <!--
   ###
   PHR_AndroidNative
@@ -25,14 +25,14 @@
   <artifactId>eShopRobotiumPerfTest</artifactId>
   <packaging>apkperf</packaging>
   <name>eShopRobotiumPerfTest</name>
-  <version>1.1.17000</version>
+  <version>1.2.0.3001-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>com.photon.maven.plugins.android.generation2</groupId>
         <artifactId>android-maven-plugin</artifactId>
-        <version>1.1.17000</version>
+        <version>1.2.0.3001-SNAPSHOT</version>
         <extensions>true</extensions>
         <configuration>
           <run>
