--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>PHR_AndroidNative</artifactId>
     <packaging>apk</packaging>
     <name>PHR_AndroidNative</name>
-    <version>1.0.0</version>
+    <version>2.0.0.1000-SNAPSHOT</version>
 	<inceptionYear>1999</inceptionYear>
     <organization>
         <name>Photon Infotech Inc.</name>
@@ -25,7 +25,7 @@
                 <plugin>
                     <groupId>com.photon.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>1.1.17000</version>
+                    <version>2.0.0.1000-SNAPSHOT</version>
                     <extensions>true</extensions>
                 </plugin>
             </plugins>
