--- a/test/unit/pom.xml
+++ b/test/unit/pom.xml
@@ -25,14 +25,14 @@
   <artifactId>phresco-test</artifactId>
   <packaging>apk</packaging>
   <name>eShop - Test</name>
-  <version>1.1.17000</version>
+  <version>2.0.0.1000-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>com.photon.maven.plugins.android.generation2</groupId>
         <artifactId>android-maven-plugin</artifactId>
-        <version>1.1.17000</version>
+        <version>2.0.0.1000-SNAPSHOT</version>
         <extensions>true</extensions>
         <configuration>
           <run>
