--- a/test/unit/pom.xml
+++ b/test/unit/pom.xml
@@ -5,14 +5,14 @@
   <artifactId>phresco-test</artifactId>
   <packaging>apk</packaging>
   <name>eShop - Test</name>
-  <version>1.2.1.2002-SNAPSHOT</version>
+  <version>1.2.1.3000</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>com.photon.maven.plugins.android.generation2</groupId>
         <artifactId>android-maven-plugin</artifactId>
-        <version>1.2.1.2002-SNAPSHOT</version>
+        <version>1.2.1.3000</version>
         <extensions>true</extensions>
         <configuration>
           <run>
