--- a/test/functional/pom.xml
+++ b/test/functional/pom.xml
@@ -12,7 +12,7 @@
             <plugin>
                 <groupId>com.photon.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <version>1.2.2.1002</version>
+                <version>1.2.3.4001-SNAPSHOT</version>
                 <extensions>true</extensions>
                 <configuration>
                     <run>
