--- a/source/AndroidManifest.xml
+++ b/source/AndroidManifest.xml
@@ -22,7 +22,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.photon.phresco.nativeapp"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0"
+	android:installLocation="auto" >
 
     <uses-sdk android:minSdkVersion="7" />
 
