--- a/source/AndroidManifest.xml
+++ b/source/AndroidManifest.xml
@@ -250,5 +250,7 @@
     </uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK" >
     </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
 
 </manifest>
