--- a/test/functional/pom.xml
+++ b/test/functional/pom.xml
@@ -12,7 +12,7 @@
             <plugin>
                 <groupId>com.photon.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <version>2.0.0.32000</version>
+                <version>2.0.0.32001-SNAPSHOT</version>
                 <extensions>true</extensions>
                 <configuration>
                     <run>
