[artf549283] : unit/functional/performance pom.xml native shopping cart application

--- a/test/functional/pom.xml
+++ b/test/functional/pom.xml
@@ -8,6 +8,8 @@
     <version>1.0.0</version>
     <build>
         <sourceDirectory>src</sourceDirectory>
+		<outputDirectory>do_not_checkin/target/android-classes</outputDirectory>
+        <directory>do_not_checkin/target</directory>
         <plugins>
             <plugin>
                 <groupId>com.photon.maven.plugins.android.generation2</groupId>
