[artf685125] : Hybrid performance test and pro-guard changes

--- a/source/proguard.cfg
+++ b/source/proguard.cfg
@@ -2,6 +2,12 @@
 -dontusemixedcaseclassnames
 -dontskipnonpubliclibraryclasses
 -dontpreverify
+-repackageclasses ''
+-allowaccessmodification
+-keepattributes *Annotation*
+-keepattributes Signature
+-dontoptimize
+-dontobfuscate
 -verbose
 -optimizations !code/simplification/arithmetic,!field/*,!class/merging/*
 
@@ -13,6 +19,19 @@
 -keep public class * extends android.app.backup.BackupAgentHelper
 -keep public class * extends android.preference.Preference
 -keep public class com.android.vending.licensing.ILicensingService
+-keep public class com.photon.phresco.nativeapp.eshop.model.appconfig.AppConfig
+-keep public class com.photon.phresco.nativeapp.eshop.model.appconfig.HeaderAssets
+
+-keep class * extends com.google.gson.Gson
+
+-keep class * extends com.google.gson.internal.bind.ReflectiveTypeAdapterFactory
+
+-keep public class * extends android.view.View {
+    public <init>(android.content.Context);
+    public <init>(android.content.Context, android.util.AttributeSet);
+    public <init>(android.content.Context, android.util.AttributeSet, int);
+    public void set*(...);
+}
 
 -keepclasseswithmembernames class * {
     native <methods>;
@@ -34,9 +53,17 @@
     public static **[] values();
     public static ** valueOf(java.lang.String);
 }
-
--keep class * implements android.os.Parcelable {
-  public static final android.os.Parcelable$Creator *;
+-keepclassmembers class * implements android.os.Parcelable {
+    static android.os.Parcelable$Creator CREATOR;
 }
 
+-keepclassmembers class **.R$* {
+    public static <fields>;
+}
+
+-keep public class * implements java.lang.reflect.Type
+
+
+-keepattributes *Annotation*
+-keep public interface com.android.vending.licensing.ILicensingService
 -dontwarn org.apache.http.**
