--- a/test/unit/pom.xml
+++ b/test/unit/pom.xml
@@ -25,7 +25,7 @@
   <artifactId>phresco-test</artifactId>
   <packaging>apk</packaging>
   <name>eShop - Test</name>
-  <version>2.3.0.6000</version>
+  <version>2.3.0.6001-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
 	<outputDirectory>do_not_checkin/target/android-classes</outputDirectory>
@@ -34,7 +34,7 @@
       <plugin>
         <groupId>com.photon.maven.plugins.android.generation2</groupId>
         <artifactId>android-maven-plugin</artifactId>
-        <version>2.3.0.6000</version>
+        <version>2.3.0.6001-SNAPSHOT</version>
         <extensions>true</extensions>
         <configuration>
           <run>
