--- a/test/performance/pom.xml
+++ b/test/performance/pom.xml
@@ -22,7 +22,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.photon.phresco.performance</groupId>
-  <artifactId>eShopRobotiumPerfTest</artifactId>
+  <artifactId>android-native-shoppingcart-perf</artifactId>
   <packaging>apkperf</packaging>
   <name>eShopRobotiumPerfTest</name>
   <version>3.3.1.14002-SNAPSHOT</version>
