--- a/test/unit/pom.xml
+++ b/test/unit/pom.xml
@@ -22,7 +22,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.photon.phresco.unit</groupId>
-  <artifactId>phresco-test</artifactId>
+  <artifactId>android-native-shoppingcart-unit</artifactId>
   <packaging>apk</packaging>
   <name>eShop - Test</name>
   <version>3.3.1.14002-SNAPSHOT</version>
